# Fast-FEM

./: .gitignore  CMakeLists.txt  README.md  assignment5.ffem  courseproject2.ffem  imgui.ini  oldcourseproject2.ffem  system.ffem
.github/workflows/: build.yml
resources/examples/: courseproject2.ffem  oldcourseproject2.ffem
src/: beam.cpp  beam.h  beam_props.h  fem_system.cpp  fem_system.h  graphics.cpp  graphics.h  gui_handler.cpp  gui_handler.h  main.cpp  material_profile.h  node.h  serialization.cpp  serialization.h  spring.cpp  spring.h  spring_system.cpp  spring_system.h
